...
                    .cornerRadius(5)
                    .shadow(color: Color.yellow, radius: 10, x: 5, y: 5)
                Rectangle()
                    .fill(Color.white)
                    .frame(width: 90, height: 50)
                    .cornerRadius(5)
                Text(viewModel.isEnough(fruit: selected) ? "만들기" : "재고없음")
                    .foregroundColor(Color.black)
            }
            .alert("재고가 부족합니다.\n 창고로 가시겠습니까?", isPresented: $isNotEnough) {
                HStack {
                    Button("네", role: .none) {
                        viewRouter.currentPage = "StorageView"
...
