...
                        RoundedRectangle(cornerRadius: 10)
                            .foregroundColor(Color.blue)
                            .frame(width: 40, height: 40)
                        RoundedRectangle(cornerRadius: 10)
                            .foregroundColor(Color.white)
                            .frame(width: 30, height: 30)
                        Text("저장")
                            .font(Font.custom("BMJUAOTF", size: 15))
                            .foregroundColor(Color.black)
                            .frame(width: 40, height: 30, alignment: .center)
                    }
                }
                Spacer()
...
